--- a/ssam.ipynb
+++ b/ssam.ipynb
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1199,
+   "execution_count": 1285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,13 +844,13 @@
     "\n",
     "    elif experiment == \"vit\":\n",
     "        model = SimpleViT(image_size=32,\n",
-    "                    patch_size=8,\n",
+    "                    patch_size=16,  # patch_size=8,\n",
     "                    num_classes=10,  # for cifar 10 and mnist\n",
     "                    dim=128,\n",
     "                    depth=12,\n",
     "                    heads=8,\n",
     "                    mlp_dim=64)\n",
-    "    \n",
+    "\n",
     "    else:\n",
     "        raise NotImplementedError(f\"experiment '{experiment}' not implemented.\")\n",
     "\n",
@@ -2134,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1276,
+   "execution_count": 1286,
    "metadata": {},
    "outputs": [
     {
@@ -2145,7 +2145,7 @@
       "Initializing model with random seed 0.\n",
       "Setting random seed to 0.\n",
       "Setting random seed to 0.\n",
-      "Model has 3377674 parameters\n"
+      "Model has 3452554 parameters\n"
      ]
     }
    ],
@@ -2154,8 +2154,8 @@
     "args.lr = 1e-3\n",
     "\n",
     "rho = 0.1  # relative to lr\n",
-    "decay_rate = 0.3  # relative to lr\n",
-    "prune_threshold = 2**-16\n",
+    "decay_rate = 0.1  # relative to lr\n",
+    "prune_threshold = 2**-8\n",
     "decay_type = \"l1\"\n",
     "\n",
     "optim_args = dict(lr=args.lr, rho=rho, scaled_max=\"adam\", sam_ord=2, #amsgrad=True,\n",
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1277,
+   "execution_count": 1287,
    "metadata": {},
    "outputs": [
     {
@@ -2178,60 +2178,52 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Test set: Average loss: 2.4485, Accuracy: 990/10000 (10%), Sparsity: 0.10%\n",
+      "Test set: Average loss: 2.5278, Accuracy: 1012/10000 (10%), Sparsity: 0.12%\n",
       "\n",
-      "Train Epoch: 1 [0/60000 (0%)]\tLoss: 2.463693,\tSparsity: 0.02%\n",
-      "Train Epoch: 1 [1600/60000 (3%)]\tLoss: 1.902514,\tSparsity: 1.37%\n",
-      "Train Epoch: 1 [3200/60000 (5%)]\tLoss: 1.375168,\tSparsity: 2.92%\n",
-      "Train Epoch: 1 [4800/60000 (8%)]\tLoss: 0.677568,\tSparsity: 4.60%\n",
-      "Train Epoch: 1 [6400/60000 (11%)]\tLoss: 0.913129,\tSparsity: 6.29%\n",
-      "Train Epoch: 1 [8000/60000 (13%)]\tLoss: 1.010559,\tSparsity: 8.04%\n",
-      "Train Epoch: 1 [9600/60000 (16%)]\tLoss: 1.039690,\tSparsity: 9.80%\n",
-      "Train Epoch: 1 [11200/60000 (19%)]\tLoss: 0.790516,\tSparsity: 11.51%\n",
-      "Train Epoch: 1 [12800/60000 (21%)]\tLoss: 1.062335,\tSparsity: 13.25%\n",
-      "Train Epoch: 1 [14400/60000 (24%)]\tLoss: 0.754814,\tSparsity: 14.97%\n",
+      "Train Epoch: 1 [0/60000 (0%)]\tLoss: 2.637979,\tSparsity: 5.72%\n",
+      "Train Epoch: 1 [1600/60000 (3%)]\tLoss: 0.902878,\tSparsity: 11.04%\n",
+      "Train Epoch: 1 [3200/60000 (5%)]\tLoss: 0.528424,\tSparsity: 13.62%\n",
+      "Train Epoch: 1 [4800/60000 (8%)]\tLoss: 0.345912,\tSparsity: 15.62%\n",
+      "Train Epoch: 1 [6400/60000 (11%)]\tLoss: 0.179577,\tSparsity: 17.30%\n",
+      "Train Epoch: 1 [8000/60000 (13%)]\tLoss: 0.352705,\tSparsity: 18.98%\n",
+      "Train Epoch: 1 [9600/60000 (16%)]\tLoss: 0.308087,\tSparsity: 20.48%\n",
+      "Train Epoch: 1 [11200/60000 (19%)]\tLoss: 0.191312,\tSparsity: 22.05%\n",
+      "Train Epoch: 1 [12800/60000 (21%)]\tLoss: 0.284910,\tSparsity: 23.36%\n",
+      "Train Epoch: 1 [14400/60000 (24%)]\tLoss: 0.285617,\tSparsity: 24.44%\n",
       "\n",
-      "Test set: Average loss: 0.7000, Accuracy: 7743/10000 (77%), Sparsity: 15.59%\n",
+      "Test set: Average loss: 0.2424, Accuracy: 9271/10000 (93%), Sparsity: 24.90%\n",
       "\n",
-      "Train Epoch: 1 [16000/60000 (27%)]\tLoss: 0.690955,\tSparsity: 16.70%\n",
-      "Train Epoch: 1 [17600/60000 (29%)]\tLoss: 0.608736,\tSparsity: 18.43%\n",
-      "Train Epoch: 1 [19200/60000 (32%)]\tLoss: 0.472532,\tSparsity: 20.22%\n",
-      "Train Epoch: 1 [20800/60000 (35%)]\tLoss: 0.690197,\tSparsity: 21.97%\n",
-      "Train Epoch: 1 [22400/60000 (37%)]\tLoss: 0.179802,\tSparsity: 23.72%\n",
-      "Train Epoch: 1 [24000/60000 (40%)]\tLoss: 0.401253,\tSparsity: 25.50%\n",
-      "Train Epoch: 1 [25600/60000 (43%)]\tLoss: 0.782227,\tSparsity: 27.26%\n",
-      "Train Epoch: 1 [27200/60000 (45%)]\tLoss: 0.444886,\tSparsity: 29.03%\n",
-      "Train Epoch: 1 [28800/60000 (48%)]\tLoss: 0.406275,\tSparsity: 30.76%\n",
+      "Train Epoch: 1 [16000/60000 (27%)]\tLoss: 0.196349,\tSparsity: 25.63%\n",
+      "Train Epoch: 1 [17600/60000 (29%)]\tLoss: 0.259566,\tSparsity: 26.77%\n",
+      "Train Epoch: 1 [19200/60000 (32%)]\tLoss: 0.039964,\tSparsity: 27.82%\n",
+      "Train Epoch: 1 [20800/60000 (35%)]\tLoss: 0.242377,\tSparsity: 28.70%\n",
+      "Train Epoch: 1 [22400/60000 (37%)]\tLoss: 0.043074,\tSparsity: 29.62%\n",
+      "Train Epoch: 1 [24000/60000 (40%)]\tLoss: 0.184895,\tSparsity: 30.49%\n",
+      "Train Epoch: 1 [25600/60000 (43%)]\tLoss: 0.367725,\tSparsity: 31.33%\n",
+      "Train Epoch: 1 [27200/60000 (45%)]\tLoss: 0.535870,\tSparsity: 32.24%\n",
+      "Train Epoch: 1 [28800/60000 (48%)]\tLoss: 0.116427,\tSparsity: 33.07%\n",
       "\n",
-      "Test set: Average loss: 0.4009, Accuracy: 8762/10000 (88%), Sparsity: 31.99%\n",
+      "Test set: Average loss: 0.1784, Accuracy: 9481/10000 (95%), Sparsity: 33.72%\n",
       "\n",
-      "Train Epoch: 1 [30400/60000 (51%)]\tLoss: 0.418450,\tSparsity: 32.44%\n",
-      "Train Epoch: 1 [32000/60000 (53%)]\tLoss: 0.632912,\tSparsity: 34.10%\n",
-      "Train Epoch: 1 [33600/60000 (56%)]\tLoss: 0.310176,\tSparsity: 35.72%\n",
-      "Train Epoch: 1 [35200/60000 (59%)]\tLoss: 0.490495,\tSparsity: 37.31%\n",
-      "Train Epoch: 1 [36800/60000 (61%)]\tLoss: 0.456491,\tSparsity: 38.84%\n",
-      "Train Epoch: 1 [38400/60000 (64%)]\tLoss: 0.489967,\tSparsity: 40.38%\n",
-      "Train Epoch: 1 [40000/60000 (67%)]\tLoss: 0.174970,\tSparsity: 41.80%\n",
-      "Train Epoch: 1 [41600/60000 (69%)]\tLoss: 0.356124,\tSparsity: 43.24%\n",
-      "Train Epoch: 1 [43200/60000 (72%)]\tLoss: 0.624234,\tSparsity: 44.65%\n",
-      "Train Epoch: 1 [44800/60000 (75%)]\tLoss: 0.145351,\tSparsity: 46.04%\n",
-      "\n",
-      "Test set: Average loss: 0.2669, Accuracy: 9199/10000 (92%), Sparsity: 46.20%\n",
-      "\n",
-      "Train Epoch: 1 [46400/60000 (77%)]\tLoss: 0.356675,\tSparsity: 47.42%\n",
-      "Train Epoch: 1 [48000/60000 (80%)]\tLoss: 0.084579,\tSparsity: 48.70%\n",
-      "Train Epoch: 1 [49600/60000 (83%)]\tLoss: 0.219660,\tSparsity: 49.97%\n",
-      "Train Epoch: 1 [51200/60000 (85%)]\tLoss: 0.147989,\tSparsity: 51.20%\n",
-      "Train Epoch: 1 [52800/60000 (88%)]\tLoss: 0.137409,\tSparsity: 52.41%\n",
-      "Train Epoch: 1 [54400/60000 (91%)]\tLoss: 0.149313,\tSparsity: 53.56%\n",
-      "Train Epoch: 1 [56000/60000 (93%)]\tLoss: 0.158553,\tSparsity: 54.70%\n",
-      "Train Epoch: 1 [57600/60000 (96%)]\tLoss: 0.317605,\tSparsity: 55.86%\n",
-      "Train Epoch: 1 [59200/60000 (99%)]\tLoss: 0.365280,\tSparsity: 56.97%\n",
-      "\n",
-      "Test set: Average loss: 0.1947, Accuracy: 9423/10000 (94%), Sparsity: 57.47%\n",
-      "\n",
-      "CPU times: user 1h 12min 59s, sys: 1h 3min 2s, total: 2h 16min 2s\n",
-      "Wall time: 31min 39s\n"
+      "Train Epoch: 1 [30400/60000 (51%)]\tLoss: 0.458933,\tSparsity: 33.93%\n",
+      "Train Epoch: 1 [32000/60000 (53%)]\tLoss: 0.213070,\tSparsity: 34.76%\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:3\u001b[0m\n",
+      "Cell \u001b[0;32mIn[876], line 21\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, optimizer, loss_fn, train_loader, test_loader, device, epoch, log_interval, test_interval, get_gradnorm)\u001b[0m\n\u001b[1;32m     18\u001b[0m     loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     19\u001b[0m     \u001b[39mreturn\u001b[39;00m loss\n\u001b[0;32m---> 21\u001b[0m loss \u001b[39m=\u001b[39m optimizer\u001b[39m.\u001b[39;49mstep(closure)\n\u001b[1;32m     22\u001b[0m \u001b[39m# Logging\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[39mif\u001b[39;00m batch_idx \u001b[39m%\u001b[39m log_interval \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/torch/lib/python3.10/site-packages/torch/optim/optimizer.py:280\u001b[0m, in \u001b[0;36mOptimizer.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    276\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    277\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m}\u001b[39;00m\u001b[39m must return None or a tuple of (new_args, new_kwargs),\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m                                \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mbut got \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 280\u001b[0m out \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    281\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_optimizer_step_code()\n\u001b[1;32m    283\u001b[0m \u001b[39m# call optimizer step post hooks\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[1197], line 73\u001b[0m, in \u001b[0;36mMaskedOptimizer.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39muse_masked_closure:\n\u001b[1;32m     72\u001b[0m     closure \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmasked_closure(closure)\n\u001b[0;32m---> 73\u001b[0m loss \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(closure)  \u001b[39m# assuming first-order step\u001b[39;00m\n\u001b[1;32m     74\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprune_smaller_than()\n\u001b[1;32m     75\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmask_params()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/torch/lib/python3.10/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[39mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "Cell \u001b[0;32mIn[1196], line 62\u001b[0m, in \u001b[0;36mDecoupledDecay.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[39m@torch\u001b[39m\u001b[39m.\u001b[39mno_grad()\n\u001b[1;32m     61\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, closure):\n\u001b[0;32m---> 62\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_store_decay()\n\u001b[1;32m     63\u001b[0m     loss \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mstep(closure)\n\u001b[1;32m     64\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_apply_decay()\n",
+      "Cell \u001b[0;32mIn[1196], line 19\u001b[0m, in \u001b[0;36mDecoupledDecay._store_decay\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m group[\u001b[39m'\u001b[39m\u001b[39mparams\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[1;32m     18\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecay_type \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39ml1\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m---> 19\u001b[0m         decay \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49msign(p)\u001b[39m.\u001b[39;49mclone()\n\u001b[1;32m     21\u001b[0m     \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecay_type \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhinge\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     22\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mexp_avg_sq\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate[p]:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
