--- a/ssam.ipynb
+++ b/ssam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 869,
+   "execution_count": 1288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 1289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 1290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 1291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 873,
+   "execution_count": 1292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 874,
+   "execution_count": 1293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 875,
+   "execution_count": 1294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 876,
+   "execution_count": 1295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1196,
+   "execution_count": 1314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1197,
+   "execution_count": 1297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1198,
+   "execution_count": 1298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1285,
+   "execution_count": 1299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 881,
+   "execution_count": 1300,
    "metadata": {},
    "outputs": [
     {
@@ -1002,12 +1002,12 @@
        "     weight_decay: 0\n",
        " ),\n",
        " CrossEntropyLoss(),\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7fb86f1fdf30>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7fb86f1fee60>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7fb7452b11e0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7fb80e1043a0>,\n",
        " None)"
       ]
      },
-     "execution_count": 881,
+     "execution_count": 1300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1210,
+   "execution_count": 1315,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1211,
+   "execution_count": 1316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1212,
+   "execution_count": 1317,
    "metadata": {},
    "outputs": [
     {
@@ -1425,8 +1425,8 @@
       "\n",
       "Test set: Average loss: 0.0563, Accuracy: 9839/10000 (98%), Sparsity: 95.31%\n",
       "\n",
-      "CPU times: user 4min 26s, sys: 4min 26s, total: 8min 52s\n",
-      "Wall time: 2min 13s\n"
+      "CPU times: user 4min 54s, sys: 4min 27s, total: 9min 22s\n",
+      "Wall time: 5min 20s\n"
      ]
     }
    ],
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1216,
+   "execution_count": 1318,
    "metadata": {},
    "outputs": [
     {
