--- a/notebooks/ssam.ipynb
+++ b/notebooks/ssam.ipynb
@@ -21,7 +21,7 @@
     "from torchvision import datasets, transforms\n",
     "import torch.utils.data as data_utils\n",
     "\n",
-    "DATASET_DIR = \"data\"\n",
+    "DATASET_DIR = \"../data\"\n",
     "TEST_AT_EPOCH_END = True"
    ]
   },
