--- a/notebooks/ssam.ipynb
+++ b/notebooks/ssam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1288,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1289,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1290,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1291,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1292,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1293,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1294,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1295,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1314,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1297,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,6 +673,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.3696,    inf],\n",
+       "         [0.8589, 0.7147]],\n",
+       "\n",
+       "        [[0.9569, 0.2805],\n",
+       "         [0.2889, 0.8202]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aaa = torch.rand(2,2,2)\n",
+    "aaa.view(-1)[aaa.argmax()] = float('inf')\n",
+    "aaa"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -682,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1298,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,11 +775,16 @@
     "\n",
     "                # adjust based on ord p (as in ||e||p <= 1)\n",
     "                if self.sam_ord == 1:\n",
-    "                    denom = denom * 0 + 1\n",
-    "                    g[g < g.abs().max()] = 0.\n",
-    "                    g[g != 0] = 1\n",
+    "                    denom = torch.ones_like(g)\n",
+    "                    g_size = g.size()\n",
+    "                    g_flat = g.flatten(1)\n",
+    "                    i_max = g_flat.argmax(1)\n",
+    "                    sign_max = g_flat[:, i_max].sign()\n",
+    "                    g_flat.zero_()\n",
+    "                    g_flat[:, i_max] = sign_max\n",
+    "                    g = g_flat.view(g_size)\n",
     "                elif self.sam_ord == 'inf':\n",
-    "                    denom = denom * 0 + 1\n",
+    "                    denom = torch.ones_like(g)\n",
     "                    g = g.sign()\n",
     "                else:\n",
     "                    pass\n",
@@ -805,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1299,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1300,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1002,12 +1033,12 @@
        "     weight_decay: 0\n",
        " ),\n",
        " CrossEntropyLoss(),\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7fb7452b11e0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7fb80e1043a0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f7a40e13c10>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f7a40e11db0>,\n",
        " None)"
       ]
      },
-     "execution_count": 1300,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,8 +1299,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## L1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1315,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using MPS\n",
+      "Initializing model with random seed 0.\n",
+      "Setting random seed to 0.\n",
+      "Setting random seed to 0.\n",
+      "Model has 61706 parameters\n"
+     ]
+    }
+   ],
+   "source": [
+    "args.experiment = \"lenet\"\n",
+    "args.lr = 1e-2\n",
+    "\n",
+    "rho = 0.1  # relative to lr\n",
+    "decay_rate = 0.1  # relative to lr\n",
+    "prune_threshold = 2**-8\n",
+    "decay_type = \"l1\"\n",
+    "\n",
+    "optim_args = dict(lr=args.lr, rho=rho, scaled_max=\"adam\", sam_ord=1, #amsgrad=True,\n",
+    "                  decay_type=decay_type, decay_rate=decay_rate, prune_threshold=prune_threshold)\n",
+    "\n",
+    "model, optimizer, loss_fn, train_loader, test_loader, device = init_experiment(args, Optimizer=SADAM, **optim_args)\n",
+    "model_state_dict0 = deepcopy(model.state_dict())\n",
+    "optimizer_state_dict0 = deepcopy(optimizer.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Reset ###\n",
+    "data = []\n",
+    "model.load_state_dict(model_state_dict0)\n",
+    "optimizer.load_state_dict(optimizer_state_dict0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Test set: Average loss: 2.3040, Accuracy: 1009/10000 (10%), Sparsity: 0.00%\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 97 is out of bounds for dimension 0 with size 6",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:2\u001b[0m\n",
+      "Cell \u001b[0;32mIn[9], line 21\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, optimizer, loss_fn, train_loader, test_loader, device, epoch, log_interval, test_interval, get_gradnorm)\u001b[0m\n\u001b[1;32m     18\u001b[0m     loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     19\u001b[0m     \u001b[39mreturn\u001b[39;00m loss\n\u001b[0;32m---> 21\u001b[0m loss \u001b[39m=\u001b[39m optimizer\u001b[39m.\u001b[39;49mstep(closure)\n\u001b[1;32m     22\u001b[0m \u001b[39m# Logging\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[39mif\u001b[39;00m batch_idx \u001b[39m%\u001b[39m log_interval \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/torch/lib/python3.10/site-packages/torch/optim/optimizer.py:280\u001b[0m, in \u001b[0;36mOptimizer.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    276\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    277\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m}\u001b[39;00m\u001b[39m must return None or a tuple of (new_args, new_kwargs),\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m                                \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mbut got \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 280\u001b[0m out \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    281\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_optimizer_step_code()\n\u001b[1;32m    283\u001b[0m \u001b[39m# call optimizer step post hooks\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[11], line 73\u001b[0m, in \u001b[0;36mMaskedOptimizer.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39muse_masked_closure:\n\u001b[1;32m     72\u001b[0m     closure \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmasked_closure(closure)\n\u001b[0;32m---> 73\u001b[0m loss \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(closure)  \u001b[39m# assuming first-order step\u001b[39;00m\n\u001b[1;32m     74\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprune_smaller_than()\n\u001b[1;32m     75\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmask_params()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/torch/lib/python3.10/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[39mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "Cell \u001b[0;32mIn[10], line 63\u001b[0m, in \u001b[0;36mDecoupledDecay.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[39m@torch\u001b[39m\u001b[39m.\u001b[39mno_grad()\n\u001b[1;32m     61\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, closure):\n\u001b[1;32m     62\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_store_decay()\n\u001b[0;32m---> 63\u001b[0m     loss \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(closure)\n\u001b[1;32m     64\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_apply_decay()\n\u001b[1;32m     66\u001b[0m     \u001b[39mreturn\u001b[39;00m loss\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/torch/lib/python3.10/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[39mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "Cell \u001b[0;32mIn[39], line 87\u001b[0m, in \u001b[0;36mSAMBase.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_init_adam()\n\u001b[1;32m     86\u001b[0m loss \u001b[39m=\u001b[39m closure()\n\u001b[0;32m---> 87\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_find_approx_constrained_max()\n\u001b[1;32m     88\u001b[0m \u001b[39m# XXX: decay after max step?\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m, DecoupledDecay):\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/torch/lib/python3.10/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[39mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "Cell \u001b[0;32mIn[39], line 68\u001b[0m, in \u001b[0;36mSAMBase._find_approx_constrained_max\u001b[0;34m(self, eps)\u001b[0m\n\u001b[1;32m     66\u001b[0m     sign_max \u001b[39m=\u001b[39m g\u001b[39m.\u001b[39mview(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)[i_max]\u001b[39m.\u001b[39msign()\n\u001b[1;32m     67\u001b[0m     g\u001b[39m.\u001b[39mzero_()\n\u001b[0;32m---> 68\u001b[0m     g[i_max] \u001b[39m=\u001b[39m sign_max\n\u001b[1;32m     69\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msam_ord \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39minf\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     70\u001b[0m     denom \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mones_like(g)\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 97 is out of bounds for dimension 0 with size 6"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for epoch in range(1, 2 + 1):\n",
+    "    results = train(model, optimizer, loss_fn, train_loader, test_loader, device, epoch)\n",
+    "    data += results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## L2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1316,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1317,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1425,8 +1558,8 @@
       "\n",
       "Test set: Average loss: 0.0563, Accuracy: 9839/10000 (98%), Sparsity: 95.31%\n",
       "\n",
-      "CPU times: user 4min 54s, sys: 4min 27s, total: 9min 22s\n",
-      "Wall time: 5min 20s\n"
+      "CPU times: user 4min 3s, sys: 3min 42s, total: 7min 45s\n",
+      "Wall time: 2min 20s\n"
      ]
     }
    ],
@@ -1439,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1213,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1590,7 @@
        "(0.05632343794945882, 0.0, 0.016100000000000003, 0.9530839788675332)"
       ]
      },
-     "execution_count": 1213,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
